# pyproject.toml

[project]

name = "backy-db"
version = "0.1.0"
description = "Modular backup and restore system"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Amgad Fikry Mohamed", email = "dr.amgad_sh92@yahoo.com" }]
dependencies = [
    "pydantic>=2.0",
    "PyYAML",
    "python-dotenv",
    "mysql-connector-python",
    "sqlparse",
]

[project.optional-dependencies]
aws = ["boto3"]
gcp = [
    "google-api-core",
    "google-auth",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "grpc-google-iam-v1",
    "grpcio",
    "grpcio-status",
    "proto-plus",
    "protobuf",
]
full = [
    "boto3",
    "google-api-core",
    "google-auth",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "grpc-google-iam-v1",
    "grpcio",
    "grpcio-status",
    "proto-plus",
    "protobuf",
]
dev = [
    "boto3",
    "google-api-core",
    "google-auth",
    "google-cloud-secret-manager",
    "google-cloud-storage",
    "grpc-google-iam-v1",
    "grpcio",
    "grpcio-status",
    "proto-plus",
    "protobuf",
    "black",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "coverage",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
